--- a/app/views/kittens/index.html.erb
+++ b/app/views/kittens/index.html.erb
@@ -2,7 +2,15 @@
 
 <ul>
   <%@kittens.each do |kitten| %>
-    <li><%= link_to kitten.name, kitten_path(kitten) %> </li>
+    <li>
+      <%= link_to kitten.name, kitten_path(kitten) %>
+      <%= link_to "Delete", kitten_path(kitten), data: {
+        turbo_method: :delete,
+        turbo_confirm: "Are you sure?"
+      } %>
+
+    </li>
+
   <% end %>
 </ul>
 
