get for index and show working with json data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <h1> <%= link_to "Kittens", root_path %></h1>
     <% flash.each do |key, message| %>
       <div class="flash flash-<%= key %>">
         <%= message %>
