--- a/app/views/kittens/show.html.erb
+++ b/app/views/kittens/show.html.erb
@@ -1,7 +1,11 @@
 <h1>Kitten</h1>
 <p>
-  <%=@kitten.name%>
-  <%=@kitten.age%>
+  <li>Name: <%=@kitten.name%> </li>
+
+  <li> Age: <%=@kitten.age%> </li>
+  <li> Cuteness: <%=@kitten.cuteness %></li>
+  <li> Cuteness: <%=@kitten.softness %></li>
+
 </p>
 <%=link_to "Edit", edit_kitten_path(@kitten)%>
 <%= link_to "Delete", kitten_path(@kitten), data: {
